# technical-support-assistant

./: README.md  REAL_WORLD_TEST_RESULTS.md  grade_rag.py  grade_real_world.py  instructions.md  pyproject.toml  run_self_eval.py  test_real_world.py
src/: __init__.py  build_index.py  rag_pipeline.py
